--- a/Total/src/main/resources/application.properties
+++ b/Total/src/main/resources/application.properties
@@ -29,14 +29,14 @@ spring.mail.username=apueda@naver.com
 spring.mail.password=dkvmek12!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.debug=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback=false
+#spring.mail.properties.mail.smtp.socketFactory.port=465
+#spring.mail.properties.mail.debug=true
 
 
 
