프로퍼티 변경 및 깃 이그노어 추가

--- a/Total/src/main/resources/application.properties
+++ b/Total/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 server.port=8118
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.10.20:3306/sick_ver2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/sick_ver2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:mysql://localhost:3306/sick?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:mysql://localhost:3306/kijutest?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 #spring.datasource.username=root
 #spring.datasource.password=rlatpgh3320!
-spring.datasource.username=sick
+spring.datasource.username=test
 #spring.datasource.username=root ???
 spring.datasource.password=1234
 
