--- a/Total/.gitignore
+++ b/Total/.gitignore
@@ -42,7 +42,7 @@ src/main/node_modules
 src/main/react/.pnp
 src/main/react/pnp.js
 src/main/react/.env
-
+src/main/resources/application*.properties
 # testing
 src/main/react/coverage
 
